# machine_learning_omeraytug_mlops25

./: main.py  pyproject.toml
code-alongs/03_linear_regression/: linear_regressio.ipynb  notes.txt
code-alongs/04_logistic_regression/: logistic_regression.ipynb
code-alongs/05_knn/: knn.ipynb
code-alongs/06_random_forest/: random_forest.ipynb
code-alongs/a1_pandas_repetition/: pandas_1_series_dataframe.ipynb  pandas_2_read_excel.ipynb  pandas_3_missing_data.ipynb  pandas_repetition.ipynb
